--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prettier-fix": "npx prettier . --write"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.9",
     "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "prettier": "3.6.2",
+    "prettier-plugin-astro": "0.14.1"
   }
 }
