--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.18",
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1"
   }
